CHANGES-1.3.txt
---------------

CHANGES IN CUPS V1.3.10

	- Documentation fixes (STR #2994, STR #2995, STR #3008, STR #3056,
	  STR #3057)
	- The scheduler incorrectly compared Mac OS X UUIDs for access
	  control, preventing access in certain configurations.
        - The IPP backend incorrectly reset the required authentication
	  to Kerberos when authentication failed.
	- The scheduler no longer looks up the local hostname by default;
	  turn on hostname lookups to restore the previous behavior.
	- The scheduler did not always load MIME type rules correctly
	  (STR #3059)
	- The test page did not format correctly on A4 paper (STR #3060)
	- The web interface sometimes incorrectly redirected users to
	  127.0.0.1 (STR #3022)
	- cupsPrintFile*() did not send the document filename for single
	  file submissions (STR #3055)
	- The scheduler did not update the member-names attribute when
	  removing the last printer from a class.
	- The scheduler did not report PPD Products with parenthesis
	  in them properly (STR #3046)
	- The wrong italic fonts were listed in the UTF-8 charset file
	  for the text filter.
	- The backends did not return an OK status for the
	  CUPS_SC_CMD_GET_BIDI side-channel command (STR #3029)
	- The scheduler did not purge jobs that were missing a
	  time-at-creation attribute, indicating a bad job control file
	  (STR #3030)
	- The "-o job-hold-until=week-end" option did not work properly
	  (STR #3025)
	- The Solaris USB printer device does not support select or poll
	  (STR #3028)
	- The scheduler would crash if you exceeded the MaxSubscriptions
	  limit.
	- The lp "-H immediate" option did not specify that the job
	  should not be held (STR #3013)
	- The scheduler did not support the "Connection: close"
	  HTTP header (STR #3010)
	- The mailto notifier didn't terminate messages properly
	  (STR #3011)
	- Backends could spin trying to read back-channel data
	  (STR #3001)
	- The HP-GL/2 filter was using the wrong default colors